# MiaouRollback

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets_svg_krita_files/: bgFilter.kra  winnertemplate.kra
common/include/: Allocator.h  Metrics.h  SharedPtr.h  Timer.h  UniquePtr.h
common/src/: Timer.cpp
game/include/: AudioManager.h  Collider.h  ColliderObject.h  Constants.h  FrameInput.h  GameApp.h  GameLogic.h  Image.h  InputsManager.h  NetworkLogic.h  PhotonApp.h  Player.h  PlayerManager.h  Renderer.h  RollbackManager.h  event.h  raylib_wrapper.h
game/src/: AudioManager.cpp  Collider.cpp  ColliderObject.cpp  FrameInput.cpp  GameApp.cpp  GameLogic.cpp  Image.cpp  InputsManager.cpp  NetworkLogic.cpp  PhotonApp.cpp  Player.cpp  PlayerManager.cpp  Renderer.cpp  RollbackManager.cpp  raylib_wrapper.cpp
libs/Common-cpp/inc/: ANSIString.h  ASCIIString.h  Base.h  BaseCharString.h  BaseListener.h  Common.h  CustomType.h  CustomTypeBase.h  Deserializer.h  JObject.h  JString.h  JTime.h  KeyObject.h  LogFormatOptions.h  Logger.h  LoggingBase.h  Nullable.h  Object.h  Serializer.h  ToString.h  ToStringDefaultImplementation.h  UTF8String.h  ValueObject.h  defines.h  platformLayer.h  porting.h
libs/Common-cpp/inc/Containers/: AssociativeContainer.h  AssociativeContainerBase.h  Dictionary.h  DictionaryBase.h  GenericAssociativeContainer.h  GenericAssociativeContainerBase.h  Hashtable.h  JArray.h  JDictionary.h  JHashSet.h  JHashtable.h  JLinkedList.h  JList.h  JQueue.h  JSortedList.h  JStack.h  JVector.h  SequenceContainer.h
libs/Common-cpp/inc/Enums/: DebugLevel.h  SerializationProtocol.h  TypeCode.h
libs/Common-cpp/inc/Helpers/: ArrayLengthType.h  AutoResetEvent.h  Callback.h  CallbackBase.h  CompileTimeAssertTrue.h  ConfirmAllowed.h  ConfirmAllowedKey.h  CustomTypeCallbackWrapper.h  CustomTypeFactory.h  Data.h  Dispatcher.h  ElementAccessor.h  EndianCorrectCast.h  EndianCorrectCastImplementation.h  KeyToObject.h  Lockable.h  LockableNonAssignable.h  Lockguard.h  MathHelper.h  Message.h  RecursivelyLockable.h  RecursivelyLockableNonAssignable.h  Retainable.h  SpinLockable.h  SpinLockableNonAssignable.h  Spinlock.h  Stringifyable.h  StringifyableNonAssignable.h  Thread.h  TypeID.h  TypeName.h  (+2 more)
libs/Common-cpp/lib/: Common-cpp_vc14_release_windows_md_ARM.lib  Common-cpp_vc14_release_windows_md_Win32.lib  Common-cpp_vc14_release_windows_md_x64.lib  Common-cpp_vc14_release_windows_mt_ARM.lib  Common-cpp_vc14_release_windows_mt_Win32.lib  Common-cpp_vc15_release_windows_md_ARM.lib  Common-cpp_vc15_release_windows_md_ARM64.lib  Common-cpp_vc15_release_windows_md_Win32.lib  Common-cpp_vc15_release_windows_md_x64.lib  Common-cpp_vc15_release_windows_mt_ARM.lib  Common-cpp_vc15_release_windows_mt_ARM64.lib  Common-cpp_vc15_release_windows_mt_Win32.lib  Common-cpp_vc16_release_windows_md_ARM.lib  Common-cpp_vc16_release_windows_md_ARM64.lib  Common-cpp_vc16_release_windows_md_Win32.lib  Common-cpp_vc16_release_windows_md_x64.lib  Common-cpp_vc16_release_windows_mt_ARM.lib  Common-cpp_vc16_release_windows_mt_ARM64.lib  Common-cpp_vc16_release_windows_mt_Win32.lib  Common-cpp_vc17_release_windows_md_ARM.lib  Common-cpp_vc17_release_windows_md_ARM64.lib  Common-cpp_vc17_release_windows_md_Win32.lib  Common-cpp_vc17_release_windows_md_x64.lib  Common-cpp_vc17_release_windows_mt_ARM.lib  Common-cpp_vc17_release_windows_mt_ARM64.lib  Common-cpp_vc17_release_windows_mt_Win32.lib
libs/LoadBalancing-cpp/inc/: AuthenticationValues.h  Client.h  ClientConstructOptions.h  ConnectOptions.h  FriendInfo.h  Listener.h  LobbyStatsRequest.h  LobbyStatsResponse.h  MutablePlayer.h  MutableRoom.h  Peer.h  Player.h  RaiseEventOptions.h  Room.h  RoomOptions.h  SendDirectOptions.h  WebFlags.h
libs/LoadBalancing-cpp/src/: AuthenticationValues.cpp  Client.cpp  ClientConstructOptions.cpp  ConnectOptions.cpp  FriendInfo.cpp  LobbyStatsRequest.cpp  LobbyStatsResponse.cpp  MutablePlayer.cpp  MutableRoom.cpp  Peer.cpp  Player.cpp  RaiseEventOptions.cpp  Room.cpp  RoomOptions.cpp  SendDirectOptions.cpp  WebFlags.cpp
libs/Photon-cpp/inc/: EventData.h  LitePeer.h  OperationRequest.h  OperationResponse.h  PhotonListener.h  PhotonPeer.h  TrafficStats.h  TrafficStatsGameLevel.h  Version.h
libs/Photon-cpp/lib/: Photon-cpp_vc14_release_windows_md_ARM.lib  Photon-cpp_vc14_release_windows_md_Win32.lib  Photon-cpp_vc14_release_windows_md_x64.lib  Photon-cpp_vc14_release_windows_mt_ARM.lib  Photon-cpp_vc14_release_windows_mt_Win32.lib  Photon-cpp_vc14_release_windows_mt_x64.lib  Photon-cpp_vc15_release_windows_md_ARM.lib  Photon-cpp_vc15_release_windows_md_Win32.lib  Photon-cpp_vc15_release_windows_mt_ARM.lib  Photon-cpp_vc15_release_windows_mt_Win32.lib  Photon-cpp_vc16_release_windows_md_ARM.lib  Photon-cpp_vc16_release_windows_md_Win32.lib  Photon-cpp_vc16_release_windows_mt_ARM.lib  Photon-cpp_vc16_release_windows_mt_Win32.lib  Photon-cpp_vc17_release_windows_md_ARM.lib  Photon-cpp_vc17_release_windows_md_Win32.lib  Photon-cpp_vc17_release_windows_mt_ARM.lib  Photon-cpp_vc17_release_windows_mt_Win32.lib
libs/math/: CMakeLists.txt  README.md  vcpkg.json
libs/math/documentation/: Build.md  NamingConvention.md
libs/math/include/: Angle.h  Const.h  Definition.h  Exception.h  Intrinsics.h  Mat2x2.h  Mat3x3.h  Mat4x4.h  NScalar.h  NVec2.h  NVec3.h  NVec4.h  Quaternion.h  Random.h  Shape.h  TrigoLUT.h  Utility.h  Vec2.h  Vec3.h  Vec4.h
libs/math/src/: Dummy.cpp
libs/math/tests/: TestAngle.cpp  TestException.cpp  TestMat2x2.cpp  TestMat3x3.cpp  TestMat4x4.cpp  TestNScalar.cpp  TestNVec2.cpp  TestNVec3.cpp  TestNVec4.cpp  TestQuaternion.cpp  TestRandom.cpp  TestShape.cpp  TestUtility.cpp  TestVec2.cpp  TestVec3.cpp  TestVec4.cpp
main/: input_test.cpp  main.cpp  network_input_test.cpp  photonImplementation.cpp
physics/include/: Body.h  Collider.h  Contact.h  ContactListener.h  QuadTree.h  World.h
physics/src/: Body.cpp  Contact.cpp  QuadTree.cpp  World.cpp
physics/test/: TestBody.cpp  TestCollider.cpp  TestQuadTree.cpp  TestSharedPtr.cpp  TestTimer.cpp  TestUniquePtr.cpp  TestWorld.cpp
(+127 files in other folders)
